src/styles/_global.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', 'Arial', sans-serif;
}

html {
  height: 100%;
  display: flex;
  flex-direction: column;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-grow: 1;

  header {
    display: flex;
    justify-content: center;
    padding-top: 80px;
    flex-shrink: 0;

    .logo {
      height: 40px;
    }

    &:before {
      content: url("../assets/figureOnTheLeftMobile.svg");
      position: absolute;
      top: 0;
      left: 0;
    }

    &:after {
      content: url("../assets/figureOnTheRightMobile.svg");
      position: absolute;
      top: 0;
      right: 0;
    }
  }

  main {
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1 0 auto;

    .containerMain {
      display: flex;
      flex-direction: column;
      align-items: center;

      .titleSit {
        text-transform: uppercase;
        opacity: 39%;
        color: #162C4E;
        font-size: 36px;
        font-weight: 700;
        text-align: center;
        line-height: 104%;
        padding-bottom: 16px;
      }

      .statement {
        line-height: 150%;
        max-width: 286px;
        font-weight: 400;
        font-size: 16px;
        text-align: center;
      }

      .timerItems {
        display: flex;
        justify-content: center;
        width: 100%;
        max-width: 310px;
        margin: 40px 0;

        .timerItem {
          font-weight: 600;
          font-size: 36px;
          line-height: 100%;
          color: #162C4E;
          text-align: center;

          .timelineName {
            display: flex;
            justify-content: center;
            align-items: center;
            background-image: url("../assets/timerValueFigure.svg");
            margin-top: 6px;
            width: 64px;
            height: 40px;
            text-transform: uppercase;
            font-weight: 400;
            font-size: 12px;
            line-height: 12px;
            color: #FFFFFF;

            .dxText {
              display: none;
            }
          }
        }

        .separator {
          flex-grow: 1;
        }
      }

      .textInvitationEventPage {
        font-weight: 400;
        font-size: 16px;
        width: 100%;
        line-height: 150%;
        max-width: 360px;
        text-align: right;
        padding-bottom: 15px;
      }

      @keyframes hoverButton {
        from {
          left: 0;
        }
        50% {
          left: 25px;
        }
        to {
          left: 0;
        }
      }

      .buttonInvitationEventPage {
        text-decoration: none;
        display: flex;
        align-items: center;
        min-width: 240px;
        padding: 16px 20px 16px 28px;
        border: 0;
        background-color: #1D4169;
        border-radius: 40px;
        color: #FFFFFF;
        font-size: 18px;
        font-weight: 400;
        line-height: 27px;
        text-align: center;
        cursor: pointer;
        position: relative;
        margin-bottom: 24px;

        &:hover {
          animation-name: hoverButton;
          animation-duration: 4s;
          animation-iteration-count: infinite;
          background-color: #356aad;
        }

        .descriptionButtonInvitationEventPage {
          text-align: left;
          flex-grow: 1;
        }

        .arrowRight {
          width: 20px;
          height: auto;
        }
      }
    }

  }

  footer {
    background-color: #162C4E;
    width: 100%;
    flex: 0 0 141px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 16px 20px;

    form {
      flex-grow: 1;
      max-width: 280px;

      .sendGroup {
        display: flex;
        flex-direction: row;
        background-color: #FFFFFF;
        border-radius: 40px;
        padding: 4px;

        .email {
          font-family: Roboto, sans-serif;
          padding-left: 16px;
          margin-right: 16px;
          border-radius: 40px;
          border: 0;
          font-weight: 400;
          font-size: 14px;
          color: rgba(0, 0, 0, 0.6);
          flex-grow: 1;
        }

        .submitButton {
          border-radius: 50%;
          background-color: #DF2224;
          border: 0;
          width: 33px;
          height: 33px;
          background-image: url("../assets/arrowRight.svg");
          background-repeat: no-repeat;
          background-position: center;
          cursor: pointer;
        }
      }
    }
  }

  #popupFade {
    position: absolute;
    align-items: center;
    justify-content: center;
    display: none;

    &:before {
      content: '';
      background-color: #162C4E;
      position: fixed;
      width: 100%;
      height: 100%;
      z-index: 9999;
      opacity: 0.6;
    }

    .popup {
      position: absolute;
      display: flex;
      flex-direction: column;
      padding: 24px 16px;
      min-height: 370px;
      width: 320px;
      background-color: #FFFFFF;
      z-index: 99999;

      .exit {
        position: absolute;
        top: 24px;
        right: 16px;
        cursor: pointer;
      }

      .mainPopup {
        display: flex;
        flex-direction: column;
        align-items: center;
        flex-grow: 1;
        justify-content: center;

        .titlePopup {
          font-weight: 700;
          font-size: 36px;
          text-align: center;
          color: #162C4E;
          text-transform: uppercase;
          line-height: 104%;
          word-break: break-all;
          margin-top: 16px;
        }

        .descriptionPopup {
          font-weight: 400;
          font-size: 16px;
          line-height: 150%;
          color: rgba(0, 0, 0, 0.8);
          text-align: center;
          padding: 28px 0;
        }

        .closeButton {
          background-color: #1D4169;
          border-radius: 40px;
          padding: 16px;
          width: 200px;
          text-align: center;
          color: #FFFFFF;
          display: flex;
          justify-content: center;
          cursor: pointer;

          &:hover {
            background-color: #356aad;
          }
        }
      }
    }
  }
}

@media (min-device-width: 768px) {
  body {

    header {
      padding-top: 100px;

      .logo {
        height: 60px;
      }

      &:before {
        content: url("../assets/figureOnTheLeftSmallDesktop.svg");
      }

      &:after {
        content: url("../assets/figureOnTheRightSmallDesktop.svg");
      }
    }

    main {
      .containerMain {
        .titleSit {
          padding-bottom: 16px;
        }

        .textInvitationEventPage {
          text-align: center;
        }

        .timerItems {
          max-width: 360px;
        }

        .buttonInvitationEventPage {
          margin: 0;
        }
      }
    }

    footer {
      flex-basis: 160px;

      form {
        max-width: 360px;
      }
    }
  }
}

@media (min-device-width: 1920px) {
  body {

    header {
      padding-top: 60px;

      &:before {
        content: url("../assets/figureOnTheLeftBigDesktop.svg");
      }

      &:after {
        content: url("../assets/figureOnTheRightBigDesktop.svg");
      }
    }

    main {
      .containerMain {
        .titleSit {
          font-size: 72px;
        }

        .statement {
          max-width: 424px;
          font-size: 18px;
        }

        .timerItems {
          max-width: 592px;
          margin-top: 32px;
          margin-bottom: 72px;
          height: 128px;

          .timerItem {
            font-size: 72px;

            .timerCount {
              max-height: 72px;
            }

            .timelineName {
              background-image: url("../assets/timerValueFigureDxt.svg");
              height: 54px;
              width: 132px;
              font-size: 16px;
              text-transform: none;

              .mbText {
                display: none;
              }

              .dxText {
                display: inline;
              }
            }
          }
        }

        .textInvitationEventPage {
          font-size: 18px;
          padding-bottom: 12px;
        }
      }
    }

    footer {
      flex-basis: 192px;

      form {
        max-width: 440px;

        .sendGroup {
          padding: 8px;
          margin-bottom: 8px;

          .email {
            font-size: 18px;
            line-height: 150%;
          }

          .submitButton {
            width: 43px;
            height: 43px;
            background-size: 20px
          }
        }
      }
    }
  }
}

